Use TLS in simpleserver tests and added flag
Added -c flag for continued running of simpleserver

--- a/simple-server/src/main/resources/logging.properties
+++ b/simple-server/src/main/resources/logging.properties
@@ -2,10 +2,19 @@
 #loggers=org.xnio.listener,org.xnio.ssl,org.apache
 loggers=io.undertow
 
-# Root logger configuration
+# Log levels
+# ERROR, DEBUG, TRACE
 logger.level=TRACE
-#logger.level=DEBUG
-#logger.level=${test.level:ERROR}
+logger.org.xnio.listener.level=DEBUG
+logger.org.xnio.ssl.level=DEBUG
+#logger.level=ERROR
+#logger.org.xnio.listener.level=ERROR
+#logger.org.xnio.ssl.level=ERROR
+
+logger.org.apache.level=WARN
+logger.org.apache.useParentHandlers=false
+
+# Root logger configuration
 logger.handlers=CONSOLE
 
 # Console handler configuration
@@ -20,10 +29,3 @@ handler.CONSOLE.formatter=PATTERN
 formatter.PATTERN=org.jboss.logmanager.formatters.PatternFormatter
 formatter.PATTERN.properties=pattern
 formatter.PATTERN.pattern=%d{HH:mm:ss,SSS} %-5p (%t) [%c] <%F:%L> %m%n
-
-logger.org.xnio.listener.level=DEBUG
-logger.org.xnio.ssl.level=DEBUG
-
-logger.org.apache.level=WARN
-logger.org.apache.useParentHandlers=false
-
